--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
+    "@types/papaparse": "^5.5.2",
+    "lucide-react": "^0.562.0",
+    "papaparse": "^5.5.3",
     "react": "^19.2.3",
-    "recharts": "^3.6.0",
-    "lucide-react": "^0.562.0"
+    "react-dom": "^19.2.3",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
