--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "xlsx": "^0.18.5",
+    "jspdf-autotable": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
