feat: Add Google Login with Supabase authentication
- Add Supabase client configuration (src/lib/supabase.ts)
- Add AuthContext for managing authentication state (src/contexts/AuthContext.tsx)
- Add LoginPage component with Google sign-in button (src/components/LoginPage.tsx)
- Update App.tsx to integrate authentication flow
- Update package.json with @supabase/supabase-js dependency
- Update .env.example with Supabase environment variables

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ VITE_API_URL=http://localhost:3001
 
 # Gemini AI API Key (Optional, for AI Chat feature)
 VITE_GEMINI_API_KEY=your-gemini-api-key
+
+# Supabase (Required for Google Auth)
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key
