--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "target": "ES2020",
-        "module": "commonjs",
+        "module": "ESNext",
+        "moduleResolution": "node",
         "lib": [
             "ES2020"
         ],
@@ -14,7 +15,8 @@
         "resolveJsonModule": true,
         "declaration": true,
         "declarationMap": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "src/**/*"
