--- a/package.json
+++ b/package.json
@@ -10,15 +10,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.89.0",
     "@types/papaparse": "^5.5.2",
-    "jspdf": "^3.0.4",
-    "lucide-react": "^0.562.0",
-    "papaparse": "^5.5.3",
-    "pdfjs-dist": "^5.4.449",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^6.20.1",
-    "recharts": "^2.10.3",
     "@vercel/node": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -26,18 +19,26 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.562.0",
+    "papaparse": "^5.5.3",
+    "pdfjs-dist": "^5.4.449",
     "pg": "^8.11.3",
-    "xlsx": "^0.18.5",
-    "jspdf-autotable": "^5.0.2"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^6.20.1",
+    "recharts": "^2.10.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/pg": "^8.10.9",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "typescript": "~5.8.2",
