--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,12 @@
 {
+    "functions": {
+        "api/index.ts": {
+            "includeFiles": "backend/**"
+        }
+    },
     "rewrites": [
         {
-            "source": "/api/(.*)",
+            "source": "/api/:path*",
             "destination": "/api/index.ts"
         }
     ]
